tests/vertical-slice/reject/composite_return_heap_owning.hew
// Reject: composite return of heap-owning payload.
// Option<string> requires tag-aware drop not yet implemented.
// Codegen must emit a fail-closed diagnostic.
enum Option<T> {
    Some(T);
    None;
}

fn greet() -> Option<string> {
    Option::Some("hello")
}

fn main() -> i64 {
    let r = greet();
    match r {
        Option::Some(s) => 1,
        Option::None => 0,
    }
}
